force-app/main/default/objects/Object_A__c/Object_A__c.object-meta.xml
<CustomObject>
    <label>Object A</label>
    <nameField>
        <label>Object A Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object A</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>