force-app/main/default/objects/Object_A__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Object A</relationshipLabel>
    <relationshipName>Object_A</relationshipName>
    <type>Lookup</type>
</CustomField>