force-app/main/default/objects/Object_A__c/fields/Case_Sensitive_Test__c.field-meta.xml
<CustomField>
    <fullName>Case_Sensitive_Test__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Case Sensitive Test</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>