force-app/main/default/objects/Object_A__c/fields/External_ID_Test__c.field-meta.xml
<CustomField>
    <fullName>External_ID_Test__c</fullName>
    <label>External ID Test</label>
    <length>18</length>
    <type>Text</type>
</CustomField>