force-app/main/default/objects/Object_A__c/fields/Text_A__c.field-meta.xml
<CustomField>
    <fullName>Text_A__c</fullName>
    <label>Text A</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>